--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -4,6 +4,11 @@
     display:flex;
     justify-content:center;
 }
+.navLogoLink{
+    text-decoration: none;
+    color: #244C2E;
+}
+
 .navContainer{
     width:100%;
     max-width:1024px;
