--- a/src/components/loginForm/loginForm.css
+++ b/src/components/loginForm/loginForm.css
@@ -3,7 +3,6 @@
     width: 100%;
     justify-content: center;
     align-items:baseline;
-    height:75vh
 }
 
 .loginContainer{
@@ -24,6 +23,9 @@
 
 .loginContainer>h1{
     color: #244C2E;
+}
+.loginForm>span{
+    color: #ff0000;
 }
 
 .loginForm{
