--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -25,10 +25,24 @@
 
 .navButton{
     background-color: #69DB86;
+    height: auto;
     margin-left: 20px;
     border: none;
-    padding: 5px 15px;
+    padding: 9px 15px;
     cursor: pointer;
     color: #244C2E;
+    font-size: 14px;
+
     /* border-radius: 10px; */
 }
+
+.navButton:hover {
+    transition: all 0.2s;
+    transform: scale(1.02);
+  }
+
+  .navIcon{
+    font-size: 15px;
+    color: rgb(247, 0, 255)
+    /* (235, 5, 235) */
+  }
