--- a/src/components/searchitem/searchItem.css
+++ b/src/components/searchitem/searchItem.css
@@ -4,14 +4,21 @@
     margin-bottom: 15px;
     background-color: white;
     padding: 10px;
+    gap: 10px;
     /* border-radius: 10px; */
+
+}
+
+.siImgContainer{
+    height: 300px;
+    width: 300px;
 
 }
 
 .siImg{
     object-fit:cover;
-    height: 300px;
-    width: auto;
+    height: 100%;
+    width: 100%;
     border-radius: 10px;
     margin-right: 15px;
 }
