--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
 body {
     margin: 0px;
 }
+
+*::-webkit-scrollbar {
+    width: 10px;
+    background-color: white;
+    border-radius: 20px;
+
+  }
+
+  *::-webkit-scrollbar-track {
+    background: white;
+    border-radius: 20px;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color: #244c2e;
+    border-radius: 20px;
+    border: 3px solid #244c2e;
+  }
